# gym-progress-tracker-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 87bfdec366e9_create_users_table.py  aadbb3fa3cca_create_training_domain_tables.py
app/: main.py
app/api/: router.py
app/api/dependencies/: __init__.py  auth.py
app/api/routes/: auth.py  health.py  users.py  workouts.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: __init__.py  exercise.py  user.py  workout_exercise.py  workout_session.py  workout_set.py
app/schemas/: __init__.py  token.py  user.py  workout.py
app/services/: __init__.py  auth.py  user.py  workout.py
tests/: test_auth.py  test_auth_dependencies.py  test_auth_service.py  test_health.py  test_jwt.py  test_login.py  test_security.py  test_token_schemas.py  test_user_schemas.py  test_users.py  test_workout_schemas.py  test_workout_service.py  test_workouts.py
